<resources>
    <string name="app_name">insumon</string>
    <string name="title_home">請輸入資料</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="inputdata">輸入血糖</string>
    <string name="date">請選擇日期</string>
    <string name="time">請選擇時間</string>
    <string name="enter">確認</string>
    <string name="manual">手動輸入</string>
    <string name="title_activity_main2">手動輸入資料</string>
    <string name="title_activity_main3">確認資料</string>
    <string name="selectdate">日期</string>
    <string name="selecttime">時間</string>
    <string name="scanNumber">掃到的數字</string>
    <string name="record">歷史紀錄</string>
    <string name="graph">圖表紀錄</string>
    <string name="before_meal">飯前</string>
    <string name="after_meal">飯後</string>
</resources>