<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerFinalResult">


    <Spinner
        android:id="@+id/meal"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@+id/掃描血糖"
        app:layout_constraintTop_toBottomOf="@+id/掃描血糖" />


    <TextView
        android:id="@+id/scanNum"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:text="@string/scanNumber"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/掃描血糖"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SelectTime"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:text="@string/selecttime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/SelectDate"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:text="@string/selectdate"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/message"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="344dp"
        android:text="@string/title_home"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/掃描血糖"
        android:layout_width="109dp"
        android:layout_height="38dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:text="掃描結果"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/SelectTime"
        app:layout_constraintTop_toBottomOf="@+id/SelectTime" />

    <TextView
        android:id="@+id/time"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/meal"
        app:layout_constraintTop_toBottomOf="@+id/meal" />

    <Button
        android:id="@+id/enter2"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginStart="162dp"

        android:layout_marginTop="57dp"
        android:layout_marginEnd="162dp"
        android:text="@string/enter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectDate" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Spinner
        android:id="@+id/spinnermealtype2"
        android:layout_width="102dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/meal"
        app:layout_constraintTop_toBottomOf="@+id/scanNum" />

</androidx.constraintlayout.widget.ConstraintLayout>