<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerManualInput">

    <Spinner
        android:id="@+id/meal"
        android:layout_width="101dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/spinnermealtype"
        app:layout_constraintTop_toBottomOf="@+id/inputSugar" />

    <TextView
        android:id="@+id/SelectTime"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:text="@string/selecttime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/SelectDate"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:text="@string/selectdate"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/inputSugar"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/掃描血糖"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="108dp"
        android:text="@string/title_home"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/掃描血糖"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/inputdata"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="29dp"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/SelectTime"
        app:layout_constraintTop_toBottomOf="@+id/SelectTime" />

    <TextView
        android:id="@+id/time"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/spinnermealtype"
        app:layout_constraintTop_toBottomOf="@+id/spinnermealtype" />

    <Button
        android:id="@+id/enter2"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="162dp"
        android:onClick="inputDataBase"
        android:text="@string/enter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectDate" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Spinner
        android:id="@+id/spinnermealtype"
        android:layout_width="102dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/掃描血糖"
        app:layout_constraintTop_toBottomOf="@+id/掃描血糖" />


</androidx.constraintlayout.widget.ConstraintLayout>
